[package]
name             = "example-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish          = false

[[bin]]
name = "imperative"
path = "src/bin/imperative.rs"

[[bin]]
name = "declarative"
path = "src/bin/declarative.rs"

[dependencies]
tkone-schedule       = { workspace = true }
tkone-trigger        = { workspace = true }
tkone-trigger-macros = { workspace = true }
chrono               = { workspace = true }
thiserror            = { workspace = true }
tokio                = { workspace = true }
