[package]
name             = "example-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish          = false

[[bin]]
name = "trigger-imperative"
path = "src/trigger/imperative.rs"

[[bin]]
name = "trigger-declarative"
path = "src/trigger/declarative.rs"

[dependencies]
tkone-schedule       = { workspace = true }
tkone-trigger        = { workspace = true }
tkone-trigger-macros = { workspace = true }
chrono               = { workspace = true }
thiserror            = { workspace = true }
tokio                = { workspace = true }
