[package]
name = "lib-schedule"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
regex ={ version = "*" }
chrono ={ version = "*"}
chrono-tz ={ version = "*"}
# lib-utils = {version = "*", path = "../../crates/lib-utils"}
once_cell = { version = "*" }
fallible-iterator = "0.3.0"
thiserror = "1.0.65"
