[package]
name = "lib-schedule"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]

[dependencies]
nom = { version = "8.0.0"}
regex ={ version = "1.11.1" }
chrono ={ version = "0.4.38"}
fallible-iterator = "0.3.0"
thiserror = "2.0.3"

[dev-dependencies]
chrono-tz ={ version = "0.10.0"}

[package.metadata.rdme]
readme-path = "README.md"